# FR-Political-Speeches

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  senat_2000_2010.yaml  vie_publique_2000_2010.yaml
src/political_speeches/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/political_speeches/collectors/: __init__.py  assemblee.py  base.py  europarl.py  senat.py  vie_publique.py
src/political_speeches/exporters/: __init__.py  jsonl.py  manifest.py  parquet.py
src/political_speeches/parsers/: __init__.py  assemblee_xml.py  base.py  europarl.py  senat_xml.py  vie_publique.py
src/political_speeches/processors/: __init__.py  cleaner.py  deduplicator.py
src/political_speeches/utils/: __init__.py  hashing.py  http.py  logging.py
